<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_stadium"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:src="@drawable/stadium"
        android:contentDescription="@string/venue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_club_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:scaleType="fitCenter"
        android:src="@drawable/borussia_m_nchengladbach_logo"
        android:contentDescription="@string/club_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_stadium" />

    <TextView
        android:id="@+id/tv_club_name"
        style="@style/TextAppearance.Material3.HeadlineMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/primary"
        android:padding="8dp"
        android:text="@string/club_name"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_club_logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_stadium">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_club_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="#202020"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/tv_club_description"
                        style="@style/TextAppearance.Material3.BodyMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/club_description"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_founded"
                        style="@style/TextAppearance.Material3.BodyMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        tools:text="Founded: 1900" />

                    <TextView
                        android:id="@+id/tv_venue"
                        style="@style/TextAppearance.Material3.BodyMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textColor="@android:color/white"
                        tools:text="Venue: Borussia-Park" />

                    <TextView
                        android:id="@+id/tv_address"
                        style="@style/TextAppearance.Material3.BodyMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textColor="@android:color/white"
                        tools:text="Address: Hennes-Weisweiler-Allee 1" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_history"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="16dp"
                    android:text="@string/history"
                    android:textSize="16sp"
                    app:cornerRadius="10dp"
                    app:icon="@drawable/sports_soccer"
                    app:iconGravity="start" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_coach"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="16dp"
                    android:text="@string/head_coach"
                    android:textSize="16sp"
                    app:cornerRadius="10dp"
                    app:icon="@drawable/ic_head_coach"
                    app:iconGravity="start" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_players"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="16dp"
                    android:text="@string/players"
                    android:textSize="16sp"
                    app:cornerRadius="10dp"
                    app:icon="@drawable/ic_team_player"
                    app:iconGravity="start" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>